# tinygrad

./: UV_SETUP.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/: ramp.py
test/mockgpu/: __init__.py
