[project]
name = "tinygrad"
version = "0.11.0"
description = "You like pytorch? You like micrograd? You love tinygrad! <3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "George Hotz" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.optional-dependencies]
arm = [
    "unicorn",
]

# triton support is optional and platform-specific
# triton = [
#     "triton-nightly>=2.1.0.dev20231014192330",
# ]

linting = [
    "pylint",
    "mypy==1.18.1",
    "typing-extensions",
    "pre-commit",
    "ruff",
    "numpy",
    "typeguard",
]

testing_minimal = [
    "numpy",
    "torch==2.9.0",
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-split",
    "hypothesis",
    "z3-solver",
]

testing_unit = [
    "numpy",
    "torch==2.9.0",
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-split",
    "hypothesis",
    "z3-solver",
    "tqdm",
    "safetensors",
    "tabulate",
]

testing = [
    "numpy",
    "torch==2.9.0",
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-split",
    "hypothesis",
    "z3-solver",
    "pillow",
    "onnx==1.18.0",
    "onnx2torch",
    "onnxruntime",
    "opencv-python",
    "tabulate",
    "tqdm",
    "safetensors",
    "transformers",
    "sentencepiece",
    "tiktoken",
    "blobfile",
    "librosa",
    "numba>=0.55",
    "networkx",
    "nibabel",
    "bottle",
    "ggml-python",
    "capstone",
    "pycocotools",
    "boto3",
    "pandas",
    "influxdb3-python",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "markdown-callouts",
    "markdown-exec[ansi]",
    "black",
    "numpy",
]

# Additional commonly used dependencies
dev = [
    "pillow",
    "typeguard",
    "capstone",
    "tqdm",
    "requests",
    "safetensors",
    "scipy",
    "transformers",
    "datasets",
    "huggingface-hub",
    "sentencepiece",
    "tiktoken",
    "onnx",
    "soundfile",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "tinygrad",
    "tinygrad.apps",
    "tinygrad.codegen",
    "tinygrad.codegen.opt",
    "tinygrad.codegen.late",
    "tinygrad.engine",
    "tinygrad.nn",
    "tinygrad.renderer",
    "tinygrad.runtime",
    "tinygrad.runtime.autogen",
    "tinygrad.runtime.autogen.am",
    "tinygrad.runtime.autogen.nv",
    "tinygrad.runtime.graph",
    "tinygrad.runtime.support",
    "tinygrad.runtime.support.am",
    "tinygrad.runtime.support.nv",
    "tinygrad.schedule",
    "tinygrad.uop",
    "tinygrad.viz",
]

[tool.setuptools.package-data]
tinygrad = ["py.typed"]
"tinygrad.viz" = ["index.html", "assets/**/*", "js/*"]

[dependency-groups]
dev = [
    "pillow",
    "typeguard",
    "capstone",
    "tqdm",
    "requests",
    "safetensors",
    "scipy",
    "transformers",
    "datasets",
    "huggingface-hub",
    "sentencepiece",
    "tiktoken",
    "onnx",
    "soundfile",
    "onnxruntime",
    "librosa",
    "pytest",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-split",
    "hypothesis",
    "z3-solver",
    "numpy",
    "torch==2.9.0",
]

[tool.pytest.ini_options]
norecursedirs = ["extra"]
timeout = 300
timeout_method = "thread"
timeout_func_only = true
testpaths = ["test"]
pythonpath = ["."]

[tool.ruff]
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W6",
    "E71",
    "E72",
    "E112",  # no-indented-block
    "E113",  # unexpected-indentation
    "E203",  # whitespace-before-punctuation
    "E272",  # multiple-spaces-before-keyword
    "E275",  # missing-whitespace-after-keyword
    "E303",  # too-many-blank-lines
    "E304",  # blank-line-after-decorator
    "E501",  # line-too-long
    "E702",  # multiple-statements-on-one-line-semicolon
    "E703",  # useless-semicolon
    "E731",  # lambda-assignment
    "W191",  # tab-indentation
    "W291",  # trailing-whitespace
    "W293",  # blank-line-with-whitespace
    "UP039", # unnecessary-class-parentheses
    "C416",  # unnecessary-comprehension
    "RET506", # superfluous-else-raise
    "RET507", # superfluous-else-continue
    "A",     # builtin-variable-shadowing
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
